fix math overflow for mobile and desktop

--- a/assets/css/extended/theme-vars-override.css
+++ b/assets/css/extended/theme-vars-override.css
@@ -21,3 +21,10 @@
     --code-bg: #37383e;
     --border: #446; */
 }
+
+mjx-container {
+  display: inline-flex;
+  overflow-x: auto;
+  overflow-y: hidden;
+  max-width: 100%;
+}
